# meridian

./: .gitignore  CLAUDE.md  EVALUATOR.md  FEEDBACK_TEMPLATE.md  LICENSE  LICENSE.PENDING  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
config/: config.yaml  index_etfs.csv  universe.csv
config/patterns/: dark_pool_accumulation.yaml  gamma_squeeze.yaml  options_led_proxy.yaml  price_before_news.yaml  sector_sympathy.yaml
docs/: BRING_YOUR_OWN_DATA.md
docs/examples/: csv_adapter.py  sample_events.csv
feed/: meridian-latest.json
helm/: helm_signalstack.py  meridian_sync.py
meridian/: __init__.py  analyze.py  cli.py  config.py  demo.py  reporting.py
meridian/adapters/: __init__.py  base.py  earnings.py  edgar.py  finra.py  fred.py  massive.py  news.py  registry.py  (+1 more)
scripts/: build_universe.py  gamma_backfill.py  gen_option_fixtures.py  validate_feed.py
tests/: conftest.py  test_analyze.py  test_dark_pool_pattern.py  test_dashboard_card.py  test_demo.py  test_example_csv_adapter.py  test_fd_leak.py  test_finra.py  test_ingest_audit.py  test_ingest_normalize.py  test_ingest_pipeline.py  test_intraday.py  test_massive.py  test_massive_options.py  test_news_rss.py  test_no_explanation.py  test_no_lookahead.py  test_options_source.py  test_phase2_featurize.py  test_phase3_match.py  test_phase4_outputs.py  test_phase5_options.py  test_phase6_predict.py  test_phase7_api.py  test_phase8_polish.py  test_provenance.py  test_residual_basis.py  test_resilience.py  test_schema.py  test_state_pure.py  test_structural_pure.py  test_watchlist.py
(+139 files in other folders)
